objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Cancellation</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Commission</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Concierge</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Member Follow Up Call</fullName>
        </values>
        <values>
            <fullName>Pending Negotiation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Escalation</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Compliance Review</fullName>
        </values>
        <values>
            <fullName>In Account Review</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Member Follow Up Call</fullName>
        </values>
        <values>
            <fullName>Pending Member Response</fullName>
        </values>
        <values>
            <fullName>Pending Provider Response</fullName>
        </values>
        <values>
            <fullName>Pre-Ex Review</fullName>
        </values>
        <values>
            <fullName>SR Sent for Reprocessing</fullName>
        </values>
        <values>
            <fullName>Waiting for EOS</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Expense Sharing</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Pending Appeal Committee</fullName>
        </values>
        <values>
            <fullName>Pending Approval</fullName>
        </values>
        <values>
            <fullName>Pending Finance</fullName>
        </values>
        <values>
            <fullName>Pending Pre-Ex Review</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>General Inquiry</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Loomis</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Provider Response</fullName>
        </values>
        <values>
            <fullName>Pre-Ex Review</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Member Enrollment</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Member Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Pre-Cert</fullName>
        <description>Pre-Cert Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Final Appeal Determination</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Appeal Committee</fullName>
        </values>
        <values>
            <fullName>Pending Pre-Ex Review</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Producer Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>vlocity_ins__Vlocity Support Process</fullName>
        <description>Vlocity Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Active_Date__c</fullName>
        <formula>Account.Active_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agent_ID__c</fullName>
        <formula>Producer__r.Agent_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appeals__c</fullName>
        <label>Appeal Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre Existing</fullName>
                </value>
                <value>
                    <fullName>Signs and Symptoms</fullName>
                </value>
                <value>
                    <fullName>Statement of Beliefs</fullName>
                </value>
                <value>
                    <fullName>Waiting Period</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Audit_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Audit Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_Number__c</fullName>
        <label>Bill Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Status__c</fullName>
        <label>Bill Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Not Entered</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Pending Pricing</fullName>
                </value>
                <value>
                    <fullName>Pre-ex Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billed_Amount__c</fullName>
        <label>Billed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPT_Codes__c</fullName>
        <inlineHelpText>Please enter each CPT codes here, separated by a comma.</inlineHelpText>
        <label>CPT Codes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Center__c</fullName>
        <label>Call Center</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dissatisfaction</fullName>
                </value>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Intentional</fullName>
                </value>
                <value>
                    <fullName>Producer</fullName>
                </value>
                <value>
                    <fullName>Program Changes</fullName>
                </value>
                <value>
                    <fullName>Program Restrictions</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Age max reached</fullName>
                    <isActive>false</isActive>
                    <label>Age max reached</label>
                </value>
                <value>
                    <fullName>Cancel within 30 days</fullName>
                    <isActive>false</isActive>
                    <label>Cancel within 30 days</label>
                </value>
                <value>
                    <fullName>Dissatisfied with service</fullName>
                    <isActive>false</isActive>
                    <label>Dissatisfied with service</label>
                </value>
                <value>
                    <fullName>Duplicate account</fullName>
                    <isActive>false</isActive>
                    <label>Duplicate account</label>
                </value>
                <value>
                    <fullName>Enrolled without consent</fullName>
                    <isActive>false</isActive>
                    <label>Enrolled without consent</label>
                </value>
                <value>
                    <fullName>Expense sharing(claim) concern</fullName>
                    <isActive>false</isActive>
                    <label>Expense sharing(claim) concern</label>
                </value>
                <value>
                    <fullName>Financial reasons</fullName>
                    <isActive>false</isActive>
                    <label>Financial reasons</label>
                </value>
                <value>
                    <fullName>Fulfillment Issue</fullName>
                    <isActive>false</isActive>
                    <label>Fulfillment Issue</label>
                </value>
                <value>
                    <fullName>Insurance through employer</fullName>
                    <isActive>false</isActive>
                    <label>Insurance through employer</label>
                </value>
                <value>
                    <fullName>Member leaving the country</fullName>
                    <isActive>false</isActive>
                    <label>Member leaving the country</label>
                </value>
                <value>
                    <fullName>Misrepresentation</fullName>
                    <isActive>false</isActive>
                    <label>Misrepresentation</label>
                </value>
                <value>
                    <fullName>Moving out of service area</fullName>
                    <isActive>false</isActive>
                    <label>Moving out of service area</label>
                </value>
                <value>
                    <fullName>Needs more coverage</fullName>
                    <isActive>false</isActive>
                    <label>Needs more coverage</label>
                </value>
                <value>
                    <fullName>No reason provided</fullName>
                    <isActive>false</isActive>
                    <label>No reason provided</label>
                </value>
                <value>
                    <fullName>Nonpayment – invalid payment method</fullName>
                    <isActive>false</isActive>
                    <label>Nonpayment – invalid payment method</label>
                </value>
                <value>
                    <fullName>Obtained traditional insurance</fullName>
                    <isActive>false</isActive>
                    <label>Obtained traditional insurance</label>
                </value>
                <value>
                    <fullName>Physician out of network</fullName>
                    <isActive>false</isActive>
                    <label>Physician out of network</label>
                </value>
                <value>
                    <fullName>Producer created account as a test</fullName>
                    <isActive>false</isActive>
                    <label>Producer created account as a test</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancel_Type__c</fullName>
        <description>This field describes if the cancel type is Uncontrollable or Controllable for Member retention</description>
        <label>Cancel Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Controllable</fullName>
                </value>
                <value>
                    <fullName>Uncontrollable</fullName>
                </value>
                <value>
                    <fullName>Concierge</fullName>
                    <isActive>false</isActive>
                    <label>Concierge</label>
                </value>
                <value>
                    <fullName>Member Enrollment</fullName>
                    <isActive>false</isActive>
                    <label>Member Enrollment</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Age__c</fullName>
        <formula>IF (IsClosed,ClosedDate - CreatedDate,NOW() - CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Created_By__c</fullName>
        <description>Field to be used in list views to show the case creator&apos;s name because the &quot;Created By&quot; standard field only works in a layout but not in a list view.</description>
        <formula>CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Resolution__c</fullName>
        <description>This Field describes the type/reason of the Case Disposition.</description>
        <inlineHelpText>Please select a Case Disposition before closing the case.</inlineHelpText>
        <label>Case Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Audit Completed</fullName>
                </value>
                <value>
                    <fullName>Added Member</fullName>
                </value>
                <value>
                    <fullName>Age Off</fullName>
                </value>
                <value>
                    <fullName>Appeal Approved</fullName>
                </value>
                <value>
                    <fullName>Appeal Denied</fullName>
                </value>
                <value>
                    <fullName>Appeal in Review</fullName>
                </value>
                <value>
                    <fullName>Appeal to Arbitration</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Audit Completed</fullName>
                </value>
                <value>
                    <fullName>Cancel &lt; 30</fullName>
                </value>
                <value>
                    <fullName>Cancelled the Account</fullName>
                </value>
                <value>
                    <fullName>Changed Producer</fullName>
                </value>
                <value>
                    <fullName>Completed Program Change</fullName>
                </value>
                <value>
                    <fullName>Coverage</fullName>
                </value>
                <value>
                    <fullName>Created Case for other Dept</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Demographics Updated</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Duplicate Pre-Cert Request</fullName>
                </value>
                <value>
                    <fullName>Duplicate Request</fullName>
                </value>
                <value>
                    <fullName>Employer Plan</fullName>
                </value>
                <value>
                    <fullName>Engage VCP</fullName>
                </value>
                <value>
                    <fullName>Enrolled</fullName>
                </value>
                <value>
                    <fullName>Escalated to Supervisor</fullName>
                </value>
                <value>
                    <fullName>Exception Made (i.e. Appeals)</fullName>
                </value>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Form Emailed</fullName>
                </value>
                <value>
                    <fullName>Form Mailed</fullName>
                </value>
                <value>
                    <fullName>Healthcare Bluebook negotiation process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Sub_Category__c</fullName>
        <description>Below are subcategories that compliance uses when either Misrepresentation or COVID-19 ARE  picked as a Case Reasom.</description>
        <label>Case Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>90 Day Wait (Preventive/Doctor Visit)</fullName>
                </value>
                <value>
                    <fullName>Cancer Wait Period</fullName>
                </value>
                <value>
                    <fullName>CAT (PCP Visits)</fullName>
                </value>
                <value>
                    <fullName>CAT (Preventive)</fullName>
                </value>
                <value>
                    <fullName>CAT (SP Visits)</fullName>
                </value>
                <value>
                    <fullName>Class Basic (SP Visit)</fullName>
                </value>
                <value>
                    <fullName>Class Enhanced (SP Visit)</fullName>
                </value>
                <value>
                    <fullName>Contribution Discrepancy</fullName>
                </value>
                <value>
                    <fullName>COVID</fullName>
                </value>
                <value>
                    <fullName>Discounts (Dental/Vision)</fullName>
                </value>
                <value>
                    <fullName>Eligibility Questions</fullName>
                </value>
                <value>
                    <fullName>Exposed</fullName>
                </value>
                <value>
                    <fullName>Inaccurate Coding</fullName>
                </value>
                <value>
                    <fullName>Infected</fullName>
                </value>
                <value>
                    <fullName>Laboratory</fullName>
                </value>
                <value>
                    <fullName>Labs/Diagnostic</fullName>
                </value>
                <value>
                    <fullName>Maternity</fullName>
                </value>
                <value>
                    <fullName>Medical Necessity</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>Not Insurance</fullName>
                </value>
                <value>
                    <fullName>OON Denial</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other (ineligible for sharing)</fullName>
                </value>
                <value>
                    <fullName>Pre-existing</fullName>
                </value>
                <value>
                    <fullName>Pre-Ex Wait Period</fullName>
                </value>
                <value>
                    <fullName>Prescription</fullName>
                </value>
                <value>
                    <fullName>Program Max</fullName>
                </value>
                <value>
                    <fullName>Reimbursed Amount</fullName>
                </value>
                <value>
                    <fullName>Surgery Wait Period</fullName>
                </value>
                <value>
                    <fullName>Timely Filing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commission_Level__c</fullName>
        <label>Commission Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Correct</fullName>
                </value>
                <value>
                    <fullName>Incorrect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Program__c</fullName>
        <label>Competitor Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aliera</fullName>
                </value>
                <value>
                    <fullName>Altrua</fullName>
                </value>
                <value>
                    <fullName>MediShare</fullName>
                </value>
                <value>
                    <fullName>Other_HealthShare</fullName>
                    <label>Other HealthShare</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Producer</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Service__c</fullName>
        <label>Date of Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dependents_DOB__c</fullName>
        <inlineHelpText>List each dependent with their date of birth.</inlineHelpText>
        <label>Dependents, DOB</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Desired_Effective_Date__c</fullName>
        <label>Desired Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diagnosis__c</fullName>
        <label>Diagnosis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Disposition_Notes__c</fullName>
        <label>Resolution Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Gender</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ISA_Remaining__c</fullName>
        <label>ISA Remaining</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISA__c</fullName>
        <inlineHelpText>Individual Sharing Amount</inlineHelpText>
        <label>ISA</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inactive_Date__c</fullName>
        <formula>Account.Inactive_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Billed_Date__c</fullName>
        <description>Last Billed Date</description>
        <label>Last Billed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employer Paid Plan</fullName>
                </value>
                <value>
                    <fullName>Financial Reasons</fullName>
                </value>
                <value>
                    <fullName>Insufficient Coverage</fullName>
                </value>
                <value>
                    <fullName>Lost in Verification</fullName>
                </value>
                <value>
                    <fullName>Non-acceptance of Sharing Eligibility</fullName>
                </value>
                <value>
                    <fullName>Non-acceptance of Statement of Beliefs</fullName>
                </value>
                <value>
                    <fullName>Non-acceptance of Waiting Periods</fullName>
                </value>
                <value>
                    <fullName>Physician Network</fullName>
                </value>
                <value>
                    <fullName>Traditional Health Plan</fullName>
                </value>
                <value>
                    <fullName>Working with Producer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manual_Adjustments__c</fullName>
        <label>Manual Adjustments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical__c</fullName>
        <label>Medical</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Member_Call_Back_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Member Call Back Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <formula>Account.PersonContact.Member_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Size__c</fullName>
        <label>Membership Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Member + 1</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>6 + Members</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monthly_Contribution__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Monthly Contribution</description>
        <label>Monthly Contribution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Negotiated_Rate__c</fullName>
        <label>Negotiated Rate</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Billed_Date__c</fullName>
        <description>Next Billed Date</description>
        <label>Next Billed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OSH_Agreed_to_Urgency_Rating__c</fullName>
        <label>OSH Agreed to Urgency Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OSH_Lesson_Learned__c</fullName>
        <label>OSH Lesson Learned</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OSH_Met_Resolution_Time__c</fullName>
        <label>OSH Met Resolution Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <label>Paid Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_ID__c</fullName>
        <description>Parent Agent ID field for Cases under Producer Account</description>
        <formula>IF(Account.RecordType.Name =&quot;Producer&quot;, Account.Parent_Agent_ID__c,&quot;&quot;)</formula>
        <label>Parent ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preexisting_Review_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preexisting Review Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>